--- a/index.html
+++ b/index.html
@@ -33,7 +33,7 @@
         <div class="large-12 columns">
                 
                     <h2>Portfolio</h2><hr>
-                    <p>When the time comes to impress, I distinguish myselfe with the following talents.Curious about what we I offer you?</p>
+                    <p>When the time comes to impress, I distinguish myself with the following talents.Curious about what  I offer you?</p>
             </div>
                     </div>
                     <ul id="works">
